force-app/main/default/objects/NSF_Exam_Attempt__c/NSF_Exam_Attempt__c.object-meta.xml
<CustomObject>
    <description>Per-user exam attempt tracking. Stores the answer selected and whether it was correct for each user/question combination.</description>
    <label>NSF Exam Attempt</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSF Exam Attempts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>