force-app/main/default/objects/NSF_Exam_Attempt__c/fields/NSF_Answer_CandidateId__c.field-meta.xml
<CustomField>
    <fullName>NSF_Answer_CandidateId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Selected Answer</label>
    <referenceTo>NSF_Exam_Answer_Candidates__c</referenceTo>
    <relationshipLabel>Exam Attempts</relationshipLabel>
    <relationshipName>NSF_Selected_Attempts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>