force-app/main/default/objects/NSF_Exam_Attempt__c/fields/NSF_ExamId__c.field-meta.xml
<CustomField>
    <fullName>NSF_ExamId__c</fullName>
    <label>Exam Question</label>
    <referenceTo>NSF_Exam__c</referenceTo>
    <relationshipLabel>Exam Attempts</relationshipLabel>
    <relationshipName>NSF_Exam_Attempts</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>