force-app/main/default/objects/NSF_Exam_Attempt__c/fields/Was_Correct__c.field-meta.xml
<CustomField>
    <fullName>Was_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Correct</label>
    <type>Checkbox</type>
</CustomField>